Slider white space fixes

--- a/assets/collection-slider.css
+++ b/assets/collection-slider.css
@@ -13,7 +13,9 @@ body {
 
 .collection-slider .slick-slide {
     width: auto;
-    max-width: 360px;
+    max-width: 25vw;
+    /* max-w is equal to 360px when screen 1440px */
+    max-height: 500px;
     margin-right: 6rem;
     box-sizing: border-box;
 }
@@ -43,13 +45,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding-top: 229px;
+    padding-top: 62%;
+    /* pt is equal to 229px according to design */
     padding-bottom: 40px;
 }
 
 .collection-slider__item_title {
     font-weight: bold;
-    font-size: 35px;
+    font-size: 2.4vw;
+    /* fsz is close to 35px according to design*/
+    /* vw is for responsiveness */
     line-height: 40px;
     letter-spacing: 0.01em;
     text-transform: uppercase;
@@ -123,6 +128,23 @@ body {
 }
 
 
+@media (max-width: 1080px) {
+    .collection-slider .slick-slide {
+        margin-right: 5rem;
+    }
+
+    .collection-slider .slick-slide:first-of-type  {
+        margin-left: 5rem;
+    }
+}
+
+@media (max-width: 769px) {
+    .collection-slider__item_link {
+        height: 36px;
+        font-size: 11px;
+    }
+}
+
 @media (max-width: 480px) {
     .collection-slider__wrapper {
         padding: 16px 0 74px 0;
@@ -157,8 +179,13 @@ body {
         padding-bottom: 30px;
     }
 
+    .collection-slider__item_title {
+        font-size: 35px;
+    }
+
     .collection-slider__item_link {
         max-width: 125px;
         height: 48px;
+        font-size: 16px;
     }
 }
